<resources>
    <string name="app_name">Count App</string>
    <string name="add_new_data">Add new data</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="profile_image">Profile Image</string>
    <string name="total_products">Total Products</string>
    <string name="total_bales">Total Bales</string>
    <string name="products">Products</string>
    <string name="bales">Bales</string>
    <string name="entries">Entries</string>
    <string name="logo">logo</string>
    <string name="eg_254712345678">eg. 254712345678</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="submit">Submit</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_the_code_sent_on_your_phone">Enter The Code Sent On Your Phone</string>
    <string name="send_code">Send Code</string>
    <string name="add_product_report">Add Product Report</string>
    <string name="enter_the_opening_tonnes">Enter The Opening Count</string>
    <string name="enter_the_closing_tonnes">Enter The Closing Count</string>
    <string name="start_typing_a_product">Start Typing A Product…</string>
    <string name="select_product">Select Product</string>
    <string name="add_mill_report">Add Mill Report</string>
    <string name="enter_the_mill_capacity">Enter The Mill Capacity</string>
    <string name="enter_the_mill_extraction">Enter The Mill Extraction</string>
    <string name="mill_data">Mill Data</string>
    <string name="dashboard">Dashboard</string>
    <string name="App_Name">CountApp</string>
    <string name="add_mill_data">Add Mill Data</string>
    <string name="add_count_data">Add Count Data</string>
    <string name="verify_code">Verify Code</string>
    <string name="logout">Logout</string>
    <string name="capture_image">Click To Capture Machine Picture</string>
    <string name="capture_picture">Click To Capture Machine picture</string>
    <string name="select_the_mill_machine">Select The Mill Machine</string>
    <string name="confirm_mill_extraction">Confirm Mill Extraction</string>
    <string name="enter_only_percentages_eg_70_25">Enter Only Percentages eg 70.25</string>
    <string name="select_the_bin_type">Select The Bin Type</string>
    <string name="select_the_ring_type">Select The Ring Count</string>
    <string name="add_bin_report">Add Bins Report</string>
    <string name="bins_report">Bins Report</string>
    <string name="loading">Loading...</string>
    <string name="enter_comments">Enter Comments</string>
    <string name="confirm_mill_capacity">Confirm Mill Capacity</string>
    <string name="enter_the_number_of_kgs">Enter The Number Of Bags</string>
    <string name="confirm_the_number_of_kgs">Confirm The Number Of Bags</string>
    <string name="resend_code">Resend Code</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="end_bin">End Bin</string>
    <string name="end_bins">End Bins</string>
    <string name="atta_report">Atta Report</string>
    <string name="add_atta_report">Add Atta Report</string>
    <string name="atta_flour">Atta Flour</string>
    <string name="enter_the_number_of_bags">Enter The Total Number Of Bags</string>
    <string name="confirm_the_total_number_of_bags">Confirm The Total Number Of Bags</string>
    <string name="capture_opening_count_image">Capture Opening Count Image</string>
    <string name="capture_image1">Capture image</string>
    <string name="confirm_closing_count">Confirm Closing Count</string>
    <string name="capture_closing_count_image">Capture Closing Count Image</string>
    <string name="confirm_the_opening_count">Confirm the Opening Count</string>
    <string name="add_closing_count">Add Closing Count</string>
</resources>