<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:layout_marginVertical="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continue"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_phone_number"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:padding="10dp"
            android:hint="@string/eg_254712345678"
            android:inputType="phone"
            android:id="@+id/phoneEt"
            android:background="@drawable/card_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_code_sent_on_your_phone"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:id="@+id/codeTv"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:padding="10dp"
            android:inputType="number"
            android:visibility="gone"
            android:id="@+id/codeEt"
            android:background="@drawable/card_bg"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitBtn"
            android:text="@string/send_code"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_bg"
            android:layout_marginTop="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/resendCodeLL"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_code"
                android:layout_marginEnd="10dp"
                android:visibility="visible"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resendCodeBtn"
                android:text="@string/resend_code"
                android:layout_marginEnd="10dp"
                android:visibility="visible"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>