<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".AddMillDataActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_mill_report"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="40dp"
            />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:src="@drawable/baseline_image_search_24"
            android:id="@+id/selectImgIv"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/capture_image"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_picture"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_the_mill_machine"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/machineSpinner"
            android:background="@drawable/card_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_mill_capacity"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:padding="10dp"
            android:inputType="numberPassword"
            android:id="@+id/millCapacityEt"
            android:background="@drawable/card_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Mill Capacity"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:padding="10dp"
            android:inputType="numberPassword"
            android:id="@+id/confirmMillCapacityEt"
            android:background="@drawable/card_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_mill_extraction"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:padding="10dp"
            android:inputType="numberDecimal|numberPassword"
            android:digits="0123456789."
            android:maxLength="6"
            android:hint="@string/enter_only_percentages_eg_70_25"
            android:id="@+id/millExtractionEt"
            android:background="@drawable/card_bg"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_mill_extraction"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:padding="10dp"
            android:inputType="numberDecimal|numberPassword"
            android:digits="0123456789."
            android:maxLength="6"
            android:hint="@string/enter_only_percentages_eg_70_25"
            android:id="@+id/confirmMillExtractionEt"
            android:background="@drawable/card_bg"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/submitBtn"
            android:background="@drawable/button_bg"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>