<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="10dp"
    android:background="@color/white"
    tools:context=".AddProductEntryActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product_report"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_product"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <AutoCompleteTextView
            android:id="@+id/productsAutoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_typing_a_product"
            android:completionThreshold="1"
            android:dropDownWidth="match_parent"
            android:padding="12dp"
            android:background="@drawable/card_bg"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_opening_tonnes"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:padding="10dp"
            android:inputType="number"
            android:id="@+id/openingCountEt"
            android:background="@drawable/card_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_closing_tonnes"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:padding="10dp"
            android:inputType="number"
            android:id="@+id/closingCountEt"
            android:background="@drawable/card_bg"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/submitBtn"
            android:background="@drawable/button_bg"
            />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>