<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBinsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_bin_report"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_the_bin_type"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/binTypeSpinner"
            android:background="@drawable/card_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_the_ring_type"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/ringTypeSpinner"
            android:background="@drawable/card_bg"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_comments"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/commentsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:lines="5"
            android:minLines="4"
            android:maxLines="10"
            android:overScrollMode="always"
            android:scrollHorizontally="false"/>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/submitBtn"
            android:background="@drawable/button_bg"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>